# backend/extension/extension/views/search_view.py
@@ -9,7 +9,7 @@ from django.core.exceptions import ObjectDoesNotExist
 def search_list(request):
     if request.method == 'GET':
         searches = Search.objects.all()
-        data = [{'id': search.id, 'sustainability_score': search.sustainability_score, 'origin_id': search.origin_id, 'destination_id': search.destination_id, 'flight_duration': search.flight_duration} for search in searches]
+        data = [{'id': search.id, 'sustainability_score': search.sustainability_score, 'origin_code': search.origin_code, 'destination_code': search.destination_code, 'flight_duration': search.flight_duration} for search in searches]
         return JsonResponse(data, safe=False)
     
     elif request.method == 'POST':
@@ -18,12 +18,12 @@ def search_list(request):
         data = json.loads(body)
         search_data = {
             'sustainability_score': data.get('sustainability_score'),
-            'origin_id': data.get('origin_id'),
-            'destination_id': data.get('destination_id'),
+            'origin_code': data.get('origin_code'),
+            'destination_code': data.get('destination_code'),
             'flight_duration': data.get('flight_duration')
         }
         search = Search.objects.create(**search_data)
-        return JsonResponse({'id': search.id, 'sustainability_score': search.sustainability_score, 'origin_id': search.origin_id, 'destination_id': search.destination_id, 'flight_duration': search.flight_duration})
+        return JsonResponse({'id': search.id, 'sustainability_score': search.sustainability_score, 'origin_code': search.origin_code, 'destination_code': search.destination_code, 'flight_duration': search.flight_duration})
 
 @csrf_exempt
 def search_detail(request, pk):
@@ -33,13 +33,13 @@ def search_detail(request, pk):
         return JsonResponse({'error': 'Search does not exist'}, status=404)
     
     if request.method == 'GET':
-        data = {'id': search.id, 'sustainability_score': search.sustainability_score, 'origin_id': search.origin_id, 'destination_id': search.destination_id, 'flight_duration': search.flight_duration}
+        data = {'id': search.id, 'sustainability_score': search.sustainability_score, 'origin_code': search.origin_code, 'destination_code': search.destination_code, 'flight_duration': search.flight_duration}
         return JsonResponse(data)
     
     elif request.method == 'PUT':
         search.sustainability_score = data.get('sustainability_score')
-        search.origin_id = data.get('origin_id')
-        search.destination_id = data.get('destination_id')
+        search.origin_code = data.get('origin_code')
+        search.destination_code = data.get('destination_code')
         search.flight_duration = data.get('flight_duration')
         search.save()
         return JsonResponse({'message': 'Search updated successfully'})
